service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app-service
  namespace: test-project
spec:
  selector:
    eventlistener: el-quarkus-listener
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
